fixed word wrap issue on home scree

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,7 +89,7 @@ html {
   left: 50%;
   -webkit-transform: translate3d(-50%, -50%, 0);
   transform: translate3d(-50%, -50%, 0);
-  max-width: 700px;
+  width: 100%
 }
 
 .link-container > a:active, a {
